--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
             <div class="modal-header"><h4>Terms of Service</h4></div>
             <!-- FIX: Replaced placeholder with a professional ToS -->
             <div class="tos-content">
-                <p><em>Last Updated: October 26, 2023</em></p>
+                <p><em>Last Updated: July 7th, 2025</em></p>
                 
                 <section>
                     <h4>1. Acceptance of Terms</h4>
